--- a/form.htm
+++ b/form.htm
@@ -177,6 +177,8 @@
                     </div>
                     <section>
                         <form action="">
+                            <label for="username">帳號:</label>
+                            <input type="text" id="username" placeholder="請輸入文字">
                             <h3>一列式表單</h3>
                             <div class="flex-form form_inline">
                                 <div class="form_grp">
@@ -385,7 +387,7 @@
                             <h3>格線式表單--多欄</h3>
                             <div class="form_grid flex-form">
                                 <div class="form_grp">
-                                    <div for="" class="form_title">form_col-6-6</div>
+                                    <div class="form_title">form_col-6-6</div>
                                     <div class="form_content form_col-6-6 form_inline">
                                         <label for="inputSample" class="label_hidden">雙欄1</label>
                                         <input name="username" id="inputSample" type="text">
@@ -395,7 +397,7 @@
                                     </div>
                                 </div>
                                 <div class="form_grp">
-                                    <div for="" class="form_title">form_col-4-4-4</div>
+                                    <div class="form_title">form_col-4-4-4</div>
                                     <div class="form_content form_col-4-4-4 form_inline">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
@@ -412,7 +414,7 @@
                                     </div>
                                 </div>
                                 <div class="form_grp">
-                                    <label for="" class="form_title">form_col-3-3-3-3</label>
+                                    <div class="form_title">form_col-3-3-3-3</div>
                                     <div class="form_content form_col-3-3-3-3 form_inline">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
@@ -421,14 +423,25 @@
                                     </div>
                                 </div>
                                 <div class="form_grp">
-                                    <label for="" class="form_title">form_col-3-9</label>
+                                    <div class="form_title">form_col-2-2-2-2-2-2</div>
+                                    <div class="form_content form_col-2-2-2-2-2-2 form_inline">
+                                        <input name="username" type="text">
+                                        <input name="username" type="text">
+                                        <input name="username" type="text">
+                                        <input name="username" type="text">
+                                        <input name="username" type="text">
+                                        <label><input name="radioSample" type="radio" value=""><span>選項</span></label>
+                                    </div>
+                                </div>
+                                <div class="form_grp">
+                                    <div class="form_title">form_col-3-9</div>
                                     <div class="form_content form_col-3-9 form_inline">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                     </div>
                                 </div>
                                 <div class="form_grp">
-                                    <label for="" class="form_title">form_col-3-3-6</label>
+                                    <div class="form_title">form_col-3-3-6</div>
                                     <div class="form_content form_col-3-3-6 form_inline">
                                         <select name="" id="">
                                             <option value="">台北市</option>
@@ -448,28 +461,28 @@
                                     </div>
                                 </div>
                                 <div class="form_grp">
-                                    <label for="" class="form_title">form_col-9-3</label>
+                                    <div class="form_title">form_col-9-3</div>
                                     <div class="form_content form_col-9-3 form_inline">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                     </div>
                                 </div>
                                 <div class="form_grp">
-                                    <label for="" class="form_title">form_col-4-8</label>
+                                    <div class="form_title">form_col-4-8</div>
                                     <div class="form_content form_col-4-8 form_inline">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                     </div>
                                 </div>
                                 <div class="form_grp">
-                                    <label for="" class="form_title">form_col-2-10</label>
+                                    <div class="form_title">form_col-2-10</div>
                                     <div class="form_content form_col-2-10 form_inline">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                     </div>
                                 </div>
                                 <div class="form_grp">
-                                    <label for="" class="form_title">form_col-2-2-8</label>
+                                    <div class="form_title">form_col-2-2-8</div>
                                     <div class="form_content form_col-2-2-8 form_inline">
                                         <select name="" id="">
                                             <option value="">台北市</option>
@@ -489,7 +502,7 @@
                                     </div>
                                 </div>
                                 <div class="form_grp">
-                                    <label for="" class="form_title">第一層Title</label>
+                                    <div class="form_title">第一層Title</div>
                                     <div class="form_content">
                                         <!-- 二欄 -->
                                         <div class="form_grp">
@@ -1068,7 +1081,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="flex-equal-2">
+                            <!-- <div class="flex-equal-2">
                                 <div class="Flex-set">
                                     <div class="col">
                                         <h3>信用卡表單</h3>
@@ -1099,7 +1112,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </form>
                     </section>
                 </div>
