--- a/fp_template.htm
+++ b/fp_template.htm
@@ -225,7 +225,7 @@
                     <section class="fp">
                         <p>註:<abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>為必填(選)欄位, 不能為空白。</p>
                         <form action="">
-                            <div class="form_grid flex_form">
+                            <div class="form_grid flex-form">
                                 <div class="form_grp">
                                     <label for="" class="form_title"><abbr class="necessary" title=“為必填(選)欄位,不能為空白。“>*</abbr>您的電子信箱：</label>
                                     <div class="form_content">
