--- a/qp_template.htm
+++ b/qp_template.htm
@@ -222,9 +222,9 @@
                         </ul>
                     </div>
                     <!-- QP Start -->
-                    <section class="">
+                    <section class="qp">
                         <p>註:<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>為必填(選)欄位, 不能為空白。</p>
-                        <form action="" class="form_grid flex_form">
+                        <form action="" class="form_grid flex-form">
                             <div class="form_grp">
                                 <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的真實姓名：</label>
                                 <div class="form_content">
