--- a/qp_template.htm
+++ b/qp_template.htm
@@ -224,77 +224,79 @@
                     <!-- QP Start -->
                     <section class="qp">
                         <p>註:<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>為必填(選)欄位, 不能為空白。</p>
-                        <form action="" class="form_grid flex-form">
-                            <div class="form_grp">
-                                <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的真實姓名：</label>
-                                <div class="form_content">
-                                    <input type="text" id="" value="">
-                                </div>
-                            </div>
-                            <div class="form_grp">
-                                <label for="password" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>聯絡電話：</label>
-                                <div class="form_content">
-                                    <input name="" id="" type="text">
-                                </div>
-                            </div>
-                            <div class="form_grp">
-                                <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的電子信箱：</label>
-                                <div class="form_content">
-                                    <input name="" id="" type="text">
-                                </div>
-                            </div>
-                            <div class="form_grp">
-                                <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
-                                <div class="form_content">
-                                    <div class="radio_grp form_inline">
-                                        <label>
-                                            <input type="radio" name="sampleRadio5" value="" checked="">類別1</label>
-                                        <label>
-                                            <input type="radio" name="sampleRadio5" value="">類別2</label>
-                                        <label>
-                                            <input type="radio" name="sampleRadio5" value="">類別3</label>
+                        <form action="">
+                            <div class="form_grid flex-form">
+                                <div class="form_grp">
+                                    <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的真實姓名：</label>
+                                    <div class="form_content">
+                                        <input type="text" id="" value="">
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form_grp">
-                                <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
-                                <div class="form_content">
-                                    <div class="check_grp form_inline">
-                                        <label>
-                                            <input type="checkbox" name="" value="" checked="">類別1</label>
-                                        <label>
-                                            <input type="checkbox" name="" value="">類別2</label>
-                                        <label>
-                                            <input type="checkbox" name="" value="">類別3</label>
+                                <div class="form_grp">
+                                    <label for="password" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>聯絡電話：</label>
+                                    <div class="form_content">
+                                        <input name="" id="" type="text">
                                     </div>
                                 </div>
-                            </div>
-                            <div class="form_grp">
-                                <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>內容：</label>
-                                <div class="form_content">
-                                    <textarea name="" id="" cols="30" rows="70"></textarea>
+                                <div class="form_grp">
+                                    <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>您的電子信箱：</label>
+                                    <div class="form_content">
+                                        <input name="" id="" type="text">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form_grp">
-                                <label for="selectSample" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
-                                <div class="form_content form_inline">
-                                    <select id="selectSample" name="">
-                                        <option value="">類別1</option>
-                                        <option value="">類別2</option>
-                                        <option value="">類別3</option>
-                                    </select>
+                                <div class="form_grp">
+                                    <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
+                                    <div class="form_content">
+                                        <div class="radio_grp form_inline">
+                                            <label>
+                                                <input type="radio" name="sampleRadio5" value="" checked="">類別1</label>
+                                            <label>
+                                                <input type="radio" name="sampleRadio5" value="">類別2</label>
+                                            <label>
+                                                <input type="radio" name="sampleRadio5" value="">類別3</label>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form_grp">
-                                <label class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>驗證碼：</label>
-                                <div class="form_content">
-                                    <img src="images/basic/captcha.gif" alt="" class="captcha">
-                                    <input type="text" id="" value="">
+                                <div class="form_grp">
+                                    <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
+                                    <div class="form_content">
+                                        <div class="check_grp form_inline">
+                                            <label>
+                                                <input type="checkbox" name="" value="" checked="">類別1</label>
+                                            <label>
+                                                <input type="checkbox" name="" value="">類別2</label>
+                                            <label>
+                                                <input type="checkbox" name="" value="">類別3</label>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="btn_grp form_inline">
-                                <input name="" type="reset" value="清除" class="btn btn-reset">
-                                <input name="Search" type="submit" value="送出" class="btn btn-submit">
+                                <div class="form_grp">
+                                    <label for="" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>內容：</label>
+                                    <div class="form_content">
+                                        <textarea name="" id="" cols="30" rows="70"></textarea>
+                                    </div>
+                                </div>
+                                <div class="form_grp">
+                                    <label for="selectSample" class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>意見類別：</label>
+                                    <div class="form_content form_inline">
+                                        <select id="selectSample" name="">
+                                            <option value="">類別1</option>
+                                            <option value="">類別2</option>
+                                            <option value="">類別3</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form_grp">
+                                    <label class="form_title"><abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>驗證碼：</label>
+                                    <div class="form_content">
+                                        <img src="images/basic/captcha.gif" alt="" class="captcha">
+                                        <input type="text" id="" value="">
+                                    </div>
+                                </div>
+                                <div class="btn_grp form_inline">
+                                    <input name="" type="reset" value="清除" class="btn btn-reset">
+                                    <input name="Search" type="submit" value="送出" class="btn btn-submit">
+                                </div>
                             </div>
                         </form>
                     </section>
