20210609修改左欄標題

--- a/cp_template.htm
+++ b/cp_template.htm
@@ -160,7 +160,7 @@
                 <!-- 左側 -->
                 <div class="left_block">
                     <div class="leftblock_list">
-                        <h2>標題文字</h2>
+                        <div class="title">標題文字</div>
                         <ul>
                             <li>
                                 <time>2020/01/01</time>
