--- a/lp_table_template.htm
+++ b/lp_table_template.htm
@@ -158,7 +158,7 @@
                 <!-- 左側 -->
                 <div class="left_block">
                     <div class="leftblock_nodemenu">
-                        <h2>標題文字</h2>
+                        <div class="title">標題文字</div>
                         <ul>
                             <li>
                                 <a href="#">節點連結文字樣式節點連結文字樣式</a>
