2021-0621 1、社群分享 icon 更新為 svg，並新增 plurk。2、function功能區塊 統一樣式、 icon 更新為 svg。3、刪除 basic中 舊式檔案格式的圖標

--- a/lp_table_template.htm
+++ b/lp_table_template.htm
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HyUI kit</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
-<![endif]-->
+        <script src="js/html5shiv.js"></script>
+        <script src="js/respond.min.js"></script>
+    <![endif]-->
     <!-- slick css-->
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
@@ -221,23 +221,24 @@
                         <!-- 社群分享 -->
                         <div class="share">
                             <ul>
-                                <li><a href="#"><img src="images/basic/icon_facebook.png" alt="facebook"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_twitter.png" alt="twitter"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_line.png" alt="line"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_youtube.png" alt="youtube"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_googleplus.png" alt="google plus"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_instagram.png" alt="instagram"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_linkedin.png" alt="LinkedIn"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_rss.png" alt="RSS"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_facebook.svg" alt="facebook"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_twitter.svg" alt="twitter"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_line.svg" alt="line"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_youtube.svg" alt="youtube"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_googleplus.svg" alt="google plus"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_instagram.svg" alt="instagram"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_linkedin.svg" alt="LinkedIn"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_rss.svg" alt="RSS"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_plurk.svg" alt="Plurk"></a></li>
                             </ul>
                         </div>
                     </div>
                     <!-- function功能區塊 -->
                     <div class="function">
                         <ul>
-                            <li><a href="#">回上一頁</a></li>
-                            <li><a href="#">友善列印</a></li>
-                            <li><a href="#">轉寄友人</a></li>
+                            <li class="icon_back"><a href="#">回上一頁</a></li>
+                            <li class="icon_print"><a href="#">友善列印</a></li>
+                            <li class="icon_forward"><a href="#">轉寄友人</a></li>
                         </ul>
                     </div>
                     <section class="lp">
