--- a/cp_template.htm
+++ b/cp_template.htm
@@ -227,36 +227,38 @@
                         <!-- 社群分享 -->
                         <div class="share">
                             <ul>
-                                <li><a href="#"><img src="images/basic/icon_facebook.png" alt="facebook"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_twitter.png" alt="twitter"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_line.png" alt="line"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_youtube.png" alt="youtube"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_googleplus.png" alt="google plus"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_instagram.png" alt="instagram"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_linkedin.png" alt="LinkedIn"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_rss.png" alt="RSS"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_facebook.svg" alt="facebook"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_twitter.svg" alt="twitter"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_line.svg" alt="line"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_youtube.svg" alt="youtube"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_googleplus.svg" alt="google plus"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_instagram.svg" alt="instagram"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_linkedin.svg" alt="LinkedIn"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_rss.svg" alt="RSS"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_plurk.svg" alt="Plurk"></a></li>
                             </ul>
                         </div>
                     </div>
                     <!-- 社群分享 -->
                     <div class="share">
                         <ul>
-                            <li><a href="#"><img src="images/basic/icon_facebook.png" alt="facebook"></a></li>
-                            <li><a href="#"><img src="images/basic/icon_twitter.png" alt="twitter"></a></li>
-                            <li><a href="#"><img src="images/basic/icon_line.png" alt="line"></a></li>
-                            <li><a href="#"><img src="images/basic/icon_youtube.png" alt="youtube"></a></li>
-                            <li><a href="#"><img src="images/basic/icon_googleplus.png" alt="google plus"></a></li>
-                            <li><a href="#"><img src="images/basic/icon_instagram.png" alt="instagram"></a></li>
-                            <li><a href="#"><img src="images/basic/icon_linkedin.png" alt="LinkedIn"></a></li>
-                            <li><a href="#"><img src="images/basic/icon_rss.png" alt="RSS"></a></li>
+                            <li><a href="#"><img src="images/basic/icon_facebook.svg" alt="facebook"></a></li>
+                            <li><a href="#"><img src="images/basic/icon_twitter.svg" alt="twitter"></a></li>
+                            <li><a href="#"><img src="images/basic/icon_line.svg" alt="line"></a></li>
+                            <li><a href="#"><img src="images/basic/icon_youtube.svg" alt="youtube"></a></li>
+                            <li><a href="#"><img src="images/basic/icon_googleplus.svg" alt="google plus"></a></li>
+                            <li><a href="#"><img src="images/basic/icon_instagram.svg" alt="instagram"></a></li>
+                            <li><a href="#"><img src="images/basic/icon_linkedin.svg" alt="LinkedIn"></a></li>
+                            <li><a href="#"><img src="images/basic/icon_rss.svg" alt="RSS"></a></li>
+                            <li><a href="#"><img src="images/basic/icon_plurk.svg" alt="Plurk"></a></li>
                         </ul>
                     </div>
                     <!-- function功能區塊 -->
                     <div class="function">
                         <ul>
-                            <li class="back"><a href="#">回上一頁</a></li>
-                            <li class="print"><a href="#">友善列印</a></li>
-                            <li class="forward"><a href="#">轉寄友人</a></li>
+                            <li class="icon_back"><a href="#">回上一頁</a></li>
+                            <li class="icon_print"><a href="#">友善列印</a></li>
+                            <li class="icon_forward"><a href="#">轉寄友人</a></li>
                         </ul>
                     </div>
                     <!-- tag 文章標籤 -->
