--- a/gs_template.htm
+++ b/gs_template.htm
@@ -202,14 +202,15 @@
                         <!-- 社群分享 -->
                         <div class="share">
                             <ul>
-                                <li><a href="#"><img src="images/basic/icon_facebook.png" alt="facebook"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_twitter.png" alt="twitter"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_line.png" alt="line"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_youtube.png" alt="youtube"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_googleplus.png" alt="google plus"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_instagram.png" alt="instagram"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_linkedin.png" alt="LinkedIn"></a></li>
-                                <li><a href="#"><img src="images/basic/icon_rss.png" alt="RSS"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_facebook.svg" alt="facebook"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_twitter.svg" alt="twitter"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_line.svg" alt="line"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_youtube.svg" alt="youtube"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_googleplus.svg" alt="google plus"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_instagram.svg" alt="instagram"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_linkedin.svg" alt="LinkedIn"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_rss.svg" alt="RSS"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_plurk.svg" alt="Plurk"></a></li>
                             </ul>
                         </div>
                     </div>
@@ -221,7 +222,7 @@
                             <li class="icon_forward"><a href="#">轉寄友人</a></li>
                         </ul>
                     </div>
-                    <!-- sP Start -->
+                    <!-- SP Start -->
                     <section class="sp">
                         <div id="gsresult">
                             <script> function gcseCallback() {
