20210625新增修改 jquery js

--- a/cp_template.htm
+++ b/cp_template.htm
@@ -406,7 +406,7 @@
                             </div>
                         </div> -->
                         <!-- fanybox cppic_slider lightbox_slider-->
-                        <div class="lightbox_slider_block">
+                       <!--  <div class="lightbox_slider_block">
                             <h3>燈箱照片</h3>
                             <div class="cppic_slider">
                                 <div class="img-container">
@@ -445,7 +445,7 @@
                                     </a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- weblink 外部連結 -->
                         <div class="web_link">
                             <h3>外部連結</h3>
@@ -630,7 +630,7 @@
     </div>
     <a href="javascript:;" class="scrollToTop">回頁首</a>
     <!-- JQ -->
-    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <!-- 外掛 plugin js -->
     <script src="vendor/jquery.easing.min.js"></script><!-- ease -->
     <script src="vendor/slick/slick.min.js "></script><!-- slick -->
