--- a/cp_template.htm
+++ b/cp_template.htm
@@ -303,7 +303,6 @@
                         <p><a href="#">連結文字樣式</a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
                         <h6>標題六</h6>
                         <p><a href="#">連結文字樣式</a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
-
                         <!-- tooltip -->
                         <h3>tooltip</h3>
                         <div class="tooltip">
@@ -313,7 +312,6 @@
                             <span tooltip="右方的tooltop說明文字" flow="right">右</span>
                         </div>
                         <p>Lorem, ipsum dolor sit amet <em tooltip="上方的tooltop說明文字">consectetur</em> adipisicing elit. Aliquid, aspernatur! Dolore quas sapiente, possimus veritatis! Eveniet, minus similique sint cum quidem eaque voluptatum eius ipsam rerum quae culpa quasi nisi!</p>
-
                         <h3>列表樣式</h3>
                         <ul>
                             <li>影開兒中不們西動會味理化由子常洲國有標題</li>
@@ -406,7 +404,7 @@
                             </div>
                         </div> -->
                         <!-- fanybox cppic_slider lightbox_slider-->
-                       <!--  <div class="lightbox_slider_block">
+                        <div class="lightbox_slider_block">
                             <h3>燈箱照片</h3>
                             <div class="cppic_slider">
                                 <div class="img-container">
@@ -445,7 +443,7 @@
                                     </a>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <!-- weblink 外部連結 -->
                         <div class="web_link">
                             <h3>外部連結</h3>
