--- a/cp_template.htm
+++ b/cp_template.htm
@@ -11,8 +11,8 @@
         <script src="js/respond.min.js"></script>
     <![endif]-->
     <!-- slick css-->
-    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" /> -->
     <!-- 燈箱facybox -->
     <link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
     <!-- hyUI css -->
@@ -303,6 +303,7 @@
                         <p><a href="#">連結文字樣式</a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
                         <h6>標題六</h6>
                         <p><a href="#">連結文字樣式</a>大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。大更沒於正時節直只們來壓算有先，求化化看雨的了元得前意要，性說用。以是一分，首字地旅紀親朋經有，在沒許、兒讓靈身不；候案司通資鄉下一支情西也哥際發你也是濟言通海後的健童頭各便。</p>
+
                         <!-- tooltip -->
                         <h3>tooltip</h3>
                         <div class="tooltip">
@@ -312,6 +313,7 @@
                             <span tooltip="右方的tooltop說明文字" flow="right">右</span>
                         </div>
                         <p>Lorem, ipsum dolor sit amet <em tooltip="上方的tooltop說明文字">consectetur</em> adipisicing elit. Aliquid, aspernatur! Dolore quas sapiente, possimus veritatis! Eveniet, minus similique sint cum quidem eaque voluptatum eius ipsam rerum quae culpa quasi nisi!</p>
+
                         <h3>列表樣式</h3>
                         <ul>
                             <li>影開兒中不們西動會味理化由子常洲國有標題</li>
@@ -455,7 +457,74 @@
                                 <li><a href="javscript:;">外部連結5</a></li>
                             </ol>
                         </div>
-                        
+                        <!-- file download 檔案下載 -->
+                        <div class="file_download">
+                            <h3>檔案下載</h3>
+                            <ul>
+                                <li><span class="file_name">檔案名稱</span>
+                                    <span class="file_doc"><a href="xxxx.doc">doc</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_docx"><a href="xxx.docx">docx</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB，下載 1,489 次</span>
+                                </li>
+                                <li><span class="file_name">檔案名稱檔案名稱</span>
+                                    <span class="file_xls"><a href="xxxx.xls">xls</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_xlsx"><a href="xxxx.xlsx">xlsx</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_csv"><a href="xxxx.csv">csv</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_ods"><a href="xxxx.ods">ods</a>823.8 KB，下載 1,489 次</span>
+                                </li>
+                                <li><span class="file_name">檔案名稱</span>
+                                    <span class="file_ppt"><a href="xxxx.ppt">ppt</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_pptx"><a href="xxxx.pptx">pptx</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_odp"><a href="xxxx.odp">odp</a>823.8 KB，下載 1,489 次</span>
+                                </li>
+                                <li><span class="file_name">檔案名稱</span>
+                                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_zip"><a href="xxxx.zip">zip</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_txt"><a href="xxxx.txt">txt</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_mov"><a href="xxxx.mov">mov</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_mp3"><a href="xxxx.mp3">mp3</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_jpg"><a href="xxxx.jpg">jpg</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_wmv"><a href="xxxx.wmv">wmv</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_mp4"><a href="xxxx.mp4">mp4</a>823.8 KB，下載 1,489 次</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- <div class="file_download">
+                            <h3>檔案下載</h3>
+                            <ul>
+                                <li>
+                                    <span class="file_name">檔案名稱</span>
+                                    <span class="file"><a href="xxxx.doc" class="file_doc">檔案名稱.doc</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.doc" class="file_docx">檔案名稱.doc</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.doc" class="file_odt">檔案名稱.doc</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.other" class="file_other">檔案名稱.other</a>823.8 KB，下載 1,489 次</span>
+                                </li>
+                                <li>
+                                    <span class="file_name">檔案名稱</span>
+                                    <span class="file"><a href="xxxx.xls" class="file_xls">檔案名稱.xls</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.xlsx" class="file_xlsx">檔案名稱.xlsx</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.csv" class="file_csv">檔案名稱.csv</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.ods" class="file_ods">檔案名稱.ods</a>823.8 KB，下載 1,489 次</span>
+                                </li>
+                                <li>
+                                    <span class="file_name">檔案名稱</span>
+                                    <span class="file"><a href="xxxx.ppt" class="file_ppt">檔案名稱.ppt</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.pptx" class="file_pptx">檔案名稱.pptx</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.odp" class="file_odp">檔案名稱.odp</a>823.8 KB，下載 1,489 次</span>
+                                </li>
+                                <li>
+                                    <span class="file_name">檔案名稱</span>
+                                    <span class="file"><a href="xxxx.pdf" class="file_pdf">檔案名稱.pdf</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.zip" class="file_zip">檔案名稱.zip</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.txt" class="file_txt">檔案名稱.txt</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.mov" class="file_mov">檔案名稱.mov</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.mp3" class="file_mp3">檔案名稱.mp3</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.jpg" class="file_jpg">檔案名稱.jpg</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.mp4" class="file_mp4">檔案名稱.mp4</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file"><a href="xxxx.wmv" class="file_wmv">檔案名稱.wmv</a>823.8 KB，下載 1,489 次</span>
+                                </li>
+                            </ul>
+                        </div> -->
                     </section>
                     <!-- CP End -->
                 </div>
