--- a/cp_template.htm
+++ b/cp_template.htm
@@ -634,7 +634,7 @@
     <!-- 外掛 plugin js -->
     <script src="vendor/jquery.easing.min.js"></script><!-- ease -->
     <script src="vendor/slick/slick.min.js "></script><!-- slick -->
-    <!-- <script src="vendor/slick/slick-lightbox.js "></script> --><!-- slick lightbox -->
+    <script src="vendor/slick/slick-lightbox.js "></script><!-- slick lightbox -->
     <script src="vendor/lazyload/lazyload.js"></script><!-- lazyload -->
     <script src="vendor/picturefill/picturefill.min.js" async></script><!-- picturefill -->
     <script src="vendor/scrolltable/jquery.scroltable.min.js"></script><!-- scrolltable -->
