--- a/cp_template_test.htm
+++ b/cp_template_test.htm
@@ -196,35 +196,35 @@
                             <h3>燈箱照片</h3>
                             <div class="cppic_slider">
                                 <div class="img-container">
-                                    <a href="images/demo/06.jpg" data-fancybox="images" data-caption="第1張圖說">
+                                    <a href="images/demo/06.jpg"  data-caption="第1張圖說">
                                         <img src="images/demo/06.jpg" alt="">
                                         <noscript><img src="images/demo/06.jpg" alt=""></noscript>
                                         <span class="caption">第1張圖說</span>
                                     </a>
                                 </div>
                                 <div class="img-container">
-                                    <a href="images/demo/07.jpg" data-fancybox="images" data-caption="第2張圖說">
+                                    <a href="images/demo/07.jpg"  data-caption="第2張圖說">
                                         <img src="images/demo/07.jpg" alt="">
                                         <noscript><img src="images/demo/07.jpg" alt=""></noscript>
                                         <span class="caption">第2張圖說</span>
                                     </a>
                                 </div>
                                 <div class="img-container">
-                                    <a href="images/demo/08.jpg" data-fancybox="images" data-caption="第3張圖說">
+                                    <a href="images/demo/08.jpg"  data-caption="第3張圖說">
                                         <img src="images/demo/08.jpg" alt="">
                                         <noscript><img src="images/demo/08.jpg" alt=""></noscript>
                                         <span class="caption">第3張圖說</span>
                                     </a>
                                 </div>
                                 <div class="img-container">
-                                    <a href="images/demo/10.jpg" data-fancybox="images" data-caption="第4張圖說">
+                                    <a href="images/demo/10.jpg"  data-caption="第4張圖說">
                                         <img src="images/demo/10.jpg" alt="">
                                         <noscript><img src="images/demo/10.jpg" alt=""></noscript>
                                         <span class="caption">第4張圖說</span>
                                     </a>
                                 </div>
                                 <div class="img-container">
-                                    <a href="images/demo/12.jpg" data-fancybox="images" data-caption="第5張圖說">
+                                    <a href="images/demo/12.jpg"  data-caption="第5張圖說">
                                         <img src="images/demo/12.jpg" alt="">
                                         <noscript><img src="images/demo/12.jpg" alt=""></noscript>
                                         <span class="caption">第5張圖說</span>
