--- a/form.htm
+++ b/form.htm
@@ -1071,7 +1071,7 @@
                                                         </select>
                                                     </div>
                                                     <div class="form_grp">
-                                                        <label for="username" class="label_hidden">四欄 欄目D：</label>
+                                                        <label for="username">四欄 欄目D：</label>
                                                         <input name="username" type="text" value="0" placeholder="" readonly="">
                                                     </div>
                                                 </div>
