--- a/form.htm
+++ b/form.htm
@@ -387,7 +387,7 @@
                             <div class="form_grid flex-form">
                                 <div class="form_grp">
                                     <div class="form_title">form_col-6-6</div>
-                                    <div class="form_content form_col-6-6 form_inline">
+                                    <div class="form_content form_col-6-6">
                                         <label for="inputSample" class="label_hidden">雙欄1</label>
                                         <input name="username" id="inputSample" type="text">
                                         <label for="inputSample2" class="label_hidden">雙欄2</label>
@@ -397,7 +397,7 @@
                                 </div>
                                 <div class="form_grp">
                                     <div class="form_title">form_col-4-4-4</div>
-                                    <div class="form_content form_col-4-4-4 form_inline">
+                                    <div class="form_content form_col-4-4-4">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                         <select id="selectSample" name="">
@@ -414,7 +414,7 @@
                                 </div>
                                 <div class="form_grp">
                                     <div class="form_title">form_col-3-3-3-3</div>
-                                    <div class="form_content form_col-3-3-3-3 form_inline">
+                                    <div class="form_content form_col-3-3-3-3">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
@@ -423,7 +423,7 @@
                                 </div>
                                 <div class="form_grp">
                                     <div class="form_title">form_col-2-2-2-2-2-2</div>
-                                    <div class="form_content form_col-2-2-2-2-2-2 form_inline">
+                                    <div class="form_content form_col-2-2-2-2-2-2">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
@@ -434,14 +434,14 @@
                                 </div>
                                 <div class="form_grp">
                                     <div class="form_title">form_col-3-9</div>
-                                    <div class="form_content form_col-3-9 form_inline">
+                                    <div class="form_content form_col-3-9">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                     </div>
                                 </div>
                                 <div class="form_grp">
                                     <div class="form_title">form_col-3-3-6</div>
-                                    <div class="form_content form_col-3-3-6 form_inline">
+                                    <div class="form_content form_col-3-3-6">
                                         <select name="" id="">
                                             <option value="">台北市</option>
                                             <option value="">新北市</option>
@@ -461,28 +461,28 @@
                                 </div>
                                 <div class="form_grp">
                                     <div class="form_title">form_col-9-3</div>
-                                    <div class="form_content form_col-9-3 form_inline">
+                                    <div class="form_content form_col-9-3">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                     </div>
                                 </div>
                                 <div class="form_grp">
                                     <div class="form_title">form_col-4-8</div>
-                                    <div class="form_content form_col-4-8 form_inline">
+                                    <div class="form_content form_col-4-8">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                     </div>
                                 </div>
                                 <div class="form_grp">
                                     <div class="form_title">form_col-2-10</div>
-                                    <div class="form_content form_col-2-10 form_inline">
+                                    <div class="form_content form_col-2-10">
                                         <input name="username" type="text">
                                         <input name="username" type="text">
                                     </div>
                                 </div>
                                 <div class="form_grp">
                                     <div class="form_title">form_col-2-2-8</div>
-                                    <div class="form_content form_col-2-2-8 form_inline">
+                                    <div class="form_content form_col-2-2-8">
                                         <select name="" id="">
                                             <option value="">台北市</option>
                                             <option value="">新北市</option>
