--- a/form.htm
+++ b/form.htm
@@ -1029,7 +1029,7 @@
                                             <label for="" class="form_title">第二層 Title</label>
                                             <div class="form_content">
                                                 <div class="form_grp">
-                                                    <div class="form_content form_inline form_col-4-4-4">
+                                                    <div class="form_content form_col-4-4-4">
                                                         <input name="" type="text" value="" placeholder="單位">
                                                         <input name="" type="text" value="" placeholder="職稱">
                                                         <br>
