--- a/form.htm
+++ b/form.htm
@@ -388,10 +388,14 @@
                                 <div class="form_grp">
                                     <div class="form_title">form_col-6-6</div>
                                     <div class="form_content form_col-6-6">
-                                        <label for="inputSample" class="label_hidden">雙欄1</label>
-                                        <input name="username" id="inputSample" type="text">
-                                        <label for="inputSample2" class="label_hidden">雙欄2</label>
-                                        <input name="username" id="inputSample2" type="text">
+                                        <div class="form_grp">
+                                            <label for="inputSample" class="label_hidden">雙欄1</label>
+                                            <input name="username" id="inputSample" type="text">
+                                        </div>
+                                        <div class="form_grp">
+                                            <label for="inputSample2" class="label_hidden">雙欄2</label>
+                                            <input name="username" id="inputSample2" type="text">
+                                        </div>
                                         <div class="notice">加上className "label_hidden" 隱藏label文字</div>
                                     </div>
                                 </div>
