--- a/index.htm
+++ b/index.htm
@@ -149,6 +149,11 @@
                     </tr>
                     <tr>
                         <td></td>
+                        <td>表單 beta版</td>
+                        <td><a href="form-beta.htm"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>按鈕樣式</td>
                         <td><a href="btn.htm"></a></td>
                     </tr>
