--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>單位名稱切版檔案</title>
+    <title>外交部領事事務局護照預約申請</title>
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -75,9 +75,9 @@
 <body>
     <div class="demo_wrap">
         <h1><img src="images/logo.png" alt=""></h1>
-        <div class="btn_grp">
+        <!-- <div class="btn_grp">
             <a href="https://github.com/HywebU00/hyui_flex" class="btn">切版檔案請按此下載</a>
-        </div>
+        </div> -->
         <hr>
         <div class="table_wrapper">
             <!-- hyUI 標準頁面 -->
@@ -92,14 +92,119 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>首頁</td>
+                        <td>登入頁</td>
                         <!-- 連結放到a裡面就好 -->
+                        <td><a href="login.htm" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>基本內頁</td>
+                        <td><a href="page.htm" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>基本表單</td>
+                        <td><a href="form-beta.htm" target="_blank"></a></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <h3>旅行社</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="num">編號</th>
+                        <th>頁面名稱</th>
+                        <th>檔案名稱</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td>表單＋列表＋個人部分的燈箱</td>
+                        <td><a href="form.htm" target="_blank"></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>資料預覽</td>
+                        <td><a href="..."></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>照片上傳、人像縮放</td>
+                        <td><a href="..."></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>檢核loading</td>
+                        <td><a href="..."></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>檢核失敗</td>
+                        <td><a href="..."></a></td>
+                    </tr>
+                </tbody>
+            </table>
+            <h3>個人</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="num">編號</th>
+                        <th>頁面名稱</th>
+                        <th>檔案名稱</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td>申辦流程</td>
+                        <td><a href="..."></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>申辦方式</td>
+                        <td><a href="..."></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>檢核成功.</td>
+                        <td><a href="..."></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>預約成功通知</td>
+                        <td><a href="..."></a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>變更辦理方式</td>
+                        <td><a href="..."></a></td>
+                    </tr>
+                    <!-- <tr>
+                        <td></td>
+                        <td>...</td>
+                        <td><a href="..."></a></td>
+                    </tr> -->
+                </tbody>
+            </table>
+            <!-- <table>
+                <thead>
+                    <tr>
+                        <th class="num">編號</th>
+                        <th>頁面名稱</th>
+                        <th>檔案名稱</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td>首頁</td>
                         <td><a href="mp_template.htm"></a></td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>flex grid</td>
-                        <!-- 連結放到a裡面就好 -->
                         <td><a href="flex_template.htm"></a></td>
                     </tr>
                     <tr>
@@ -183,9 +288,9 @@
                         <td><a href="404.htm"></a></td>
                     </tr>
                 </tbody>
-            </table>
+            </table> -->
             <!-- 專案客製化頁面 -->
-            <table>
+            <!-- <table>
                 <thead>
                     <tr>
                         <th class="num">編號</th>
@@ -211,7 +316,7 @@
                     </tr>
 
                 </tbody>
-            </table>
+            </table> -->
         </div>
     </div>
     <a href="javascript:;" class="scrollToTop" >回頁首</a>
